scode/Black_light/prob7/error.txt
  File "/var/www/html/scode/Black_light/prob7/main.py", line 9
    c++
       ^
SyntaxError: invalid syntax
